# testingpythoncrm

./: .env  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: generate_fake_data.py  wait_for_db.py
api/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CRMDashboard.tsx
frontend/src/types/: index.ts
testingpython/: Dockerfile  asgi.py  settings.py  urls.py  wsgi.py
